<resources>
    <string name="app_name">iTrip</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Upcoming</string>
    <string name="menu_gallery">History</string>
    <string name="menu_send">Logout</string>
    <string name="name">Name</string>
    <string name="facebook_app_id">2114845638805730</string>
    <string name="fb_login_protocol_scheme">fb2114845638805730</string>
    <string name="google">Continue with Google      </string>
    <string name="haveAccount">Already have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create">Create an account</string>
    <string name="welcome">Welcome to our app</string>
    <string name="signup">Sign up</string>
    <string name="add_more_trips">Opps! No trips here. Start by adding(+) more trips.</string>
    <string name="past_trips">Opps! No trips here yet.</string>
    <string name="card_cancel">Cancel</string>
    <string name="card_delete">Delete</string>

    <string name="confirm">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="delete_trip">Are you sure you want to delete trip?</string>

    <string name="tripName">trip</string>
    <string name="startpoint">startpoint</string>
    <string name="StartPoint">Start point</string>
    <string name="endpoint">End point</string>
    <string name="Tripname">Trip name</string>
    <string name="addaNewTrip">Add a new TRIP</string>
    <string name="add_trip">Add Trip</string>
    <string name="Type_trip">Type of trip</string>
    <string name="Repetition">Repetition</string>
    <string name="time">00:00 AM</string>


    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="DateTime">Date-Time</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="date">m/dd/yyyy</string>
    <string name="datetime">m/dd/yyyy---00:00 AM</string>

    <string-array name="typeoftrip">
        <item>One Direction</item>
        <item>Round Trip</item>
    </string-array>

    <string-array name="repetition">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="login_failed">Invalid email or password</string>
    <string name="empty_email">Enter email</string>
    <string name="empty_password">Enter password</string>
    <string name="weak_password">Password too weak</string>
    <string name="invalid_email">"Enter a valid email address"</string>
    <string name="unable_register">Unable to register</string>
    <string name="password_error">Passwords do not match</string>
    <string name="empty_name">Enter name</string>
    <string name="name_error">Do not use special character or numbers </string>
    <string name="upcoming">Upcoming</string>
    <string name="save">Save</string>
    <string name="round_trip">Round Trip</string>
    <string name="once">Once</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="check_internet">Check internet connection</string>
    <string name="selected_trip">selected trip</string>
    <string name="single">single</string>
    <string name="round">round</string>
    <string name="choose_time">choose time</string>
    <string name="choose_date">choose date</string>
    <string name="alarm_trip">Trip alarm</string>
    <string name="reminder">Reminder for your trip!</string>
    <string name="start">Start</string>
    <string name="snooze">Snooze</string>
    <string name="trip_added">Trip added</string>
    <string name="trip_edit">Trip edited</string>
    <string name="alarmManager">alarmManager</string>
    <string name="isRound">isRound</string>
    <string name="alarm">alarm</string>
    <string name="data">DATA</string>
    <string name="enter_start_date">Enter start date and time</string>
    <string name="history">History</string>
    <string name="logout">Log out</string>
    <string name="start_error">Enter start location</string>
    <string name="dest_error">Enter destination location</string>
    <string name="title_error">Enter trip title</string>
    <string name="round_error">Enter round trip date</string>
    <string name="start_date_error">Enter start trip date</string>
    <string name="start_date_time">Start Date-Time</string>
    <string name="round_date_time">Round Date-Time</string>
    <string name="trip_title">Trip Title</string>
    <string name="alarm_message">alarm message</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_history_map">Map</string>
    <string name="start_points">startPoints</string>
    <string name="end_points">endPoints</string>
    <string name="round_before_error">Round time must be after start time</string>
    <string name="cancel_trip_alert">"Do you want cancel trip?"</string>
<string name="cancel_once">Cancel once</string>
<string name="cancel_repeat">Cancel repeating trips</string>
</resources>
