<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_upcoming">

    <fragment
        android:id="@+id/nav_upcoming"
        android:name="com.andro.itrip.ui.upcomingUI.UpcomingFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.andro.itrip.ui.historyUI.HistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.andro.itrip.ui.logout.LogoutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>