<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"

        android:layout_marginTop="22dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="378dp"
        android:layout_height="55dp"
        android:layout_below="@+id/nameLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"

        android:layout_marginTop="22dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="374dp"
        android:layout_height="51dp"
        android:layout_below="@+id/emailLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="20dp"
        android:text="@string/haveAccount" />

    <Button
        android:id="@+id/loginButton2"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signup" />

</RelativeLayout>