<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="141dp"
            android:layout_height="140dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="137dp"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="339dp"
            android:layout_height="32dp"
            android:layout_below="@+id/imageView5"
            android:layout_alignParentStart="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp"
            android:text="@string/haveAccount" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="378dp"
            android:layout_height="55dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"

            android:layout_marginTop="22dp"
            android:layout_marginBottom="20dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="374dp"
            android:layout_height="51dp"
            android:layout_below="@+id/emailLayout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="20dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="384dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPasswordLayout"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="31dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login" />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/googleButton"
            android:layout_width="350dp"
            android:layout_height="37dp"
            android:layout_below="@+id/loginButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="20dp"
            android:text="@string/google" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookButton"
            android:layout_width="358dp"
            android:layout_height="75dp"
            android:layout_below="@+id/googleButton"
            android:layout_alignStart="@+id/googleButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebookButton"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@color/browser_actions_bg_grey"
            android:text="@string/create" />


    </RelativeLayout>
</ScrollView>