<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitePurble">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.TripActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/Tripname"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/editTxt_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName">

                <requestFocus />
            </EditText>
            <TextView
                android:id="@+id/nameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartPoint"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <fragment
                android:id="@+id/editTxt_start_point"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                 />
            <TextView
                android:id="@+id/startPointError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endpoint"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <fragment
                android:id="@+id/editTxt_end_point"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="46dp"
             />
            <TextView
                android:id="@+id/endPointError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Type_trip"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/spinner_type_trip"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="marquee"
                android:entries="@array/typeoftrip"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Repetition"
                android:textAlignment="textStart"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/spinner_trip_repetition"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="marquee"
                android:entries="@array/repetition"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="32dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/start_date_time"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txtView_time"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_border"
                        android:paddingTop="8dp"
                        android:text="@string/datetime"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/startDateError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textColor="@android:color/holo_red_dark"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/round_trip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/round_date_time"
                        android:textColor="@android:color/black" />


                    <TextView
                        android:id="@+id/txtView_time2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_border"
                        android:paddingTop="8dp"
                        android:text="@string/datetime"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/roundDateError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="textStart"
                        android:textColor="@android:color/holo_red_dark"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <EditText
                        android:id="@+id/textView_add_note"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/image_add_note"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:tint="@color/palette3"
                        app:srcCompat="@drawable/note" />

                </LinearLayout>


                <ListView
                    android:id="@+id/list_view_notes"
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:nestedScrollingEnabled="true"
                    android:visibility="gone"
                    android:background="@color/palette4"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="0dp"
                android:text="@string/Add"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>
